Update to Java 16
- Update gradle to 7.0
- Update Java to 16
- update jlink plugin
- Update release pipeline